--- a/src/server/views/app.handlebars
+++ b/src/server/views/app.handlebars
@@ -158,7 +158,7 @@
         });
     });
 
-    document.getElementById("fetch-document-url").value = "http://localhost:3080/apidoc/mqtt.yml";
+    document.getElementById("fetch-document-url").value = "http://localhost:3070/apidoc/0-realtime-api.yml";
     document.forms["fetch-document"].children[1].click();
 
   });
